--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/style.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/dcdaab4f9f.js" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="./js/script.js"></script>
         <title>Document</title>
     </head>
     <body>
-        
-        <script type="text/javascript" src="./js/script.js"></script>
+        <form class="mx-5 my-2">
+            <div>
+                <label for="kilometres" class="form-label">Quanti kilometri vuoi percorrere?</label>
+                <input type="text" class="form-control" id="kilometres" name="kilometres">
+            </div>
+            <div>
+                <label for="age" class="form-label">Quanti anni hai?</label>
+                <input type="text" class="form-control" id="age" name="age">
+            </div>
+            
+            <button type="button" class="btn btn-primary my-3" onClick="priceCalc()">Invia</button>
+        </form>
+        <h3 class="mx-5">
+            Your price is <span id="price">to be calculated</span>.
+        </h3>
     </body>
 </html>
